# certswap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
openspec/archive/2026-05-26-init-certswap/: design.md  proposal.md  tasks.md
src/certswap/: cli.py  evidence.py  models.py  state.py
src/certswap/commands/: _apply_runner.py  _inspect_view.py  _options.py  _render.py  apply.py  common.py  inspect.py  plan.py  upcoming.py  verify.py
src/certswap/commands/apply/: __init__.py  _app.py  _k8s.py  _local.py  _proxmox.py  _ssh.py
src/certswap/commands/plan/: __init__.py  _app.py  _k8s.py  _local.py  _proxmox.py  _ssh.py
src/certswap/core/: chain.py  trust.py  validation.py
src/certswap/drivers/: __init__.py  _k8s_apply.py  _k8s_argo.py  _k8s_argo_meta.py  _k8s_client.py  _k8s_ingress.py  _k8s_live.py  _k8s_live_argo.py  _k8s_live_ingress.py  _k8s_options.py  _k8s_verify.py  _ssh_apply.py  _ssh_options.py  _ssh_shell.py  base.py  k8s.py  local.py  proxmox.py  ssh.py
src/certswap/ingest/: __init__.py  archive.py  detect.py  pem.py  pfx.py  pkcs7.py  separate.py
tests/: conftest.py  test_cli.py  test_evidence.py  test_smoke.py  test_state.py
tests/commands/: test_inspect.py  test_plan_apply_verify.py  test_upcoming.py
tests/core/: test_chain.py  test_trust.py  test_validation.py
tests/drivers/: test_k8s.py  test_k8s_live_argo.py  test_local.py  test_proxmox.py  test_ssh.py
tests/ingest/: test_archive.py  test_detect.py  test_pem.py  test_pfx.py  test_pkcs7.py  test_separate.py
