[project]
name = "certswap"
version = "0.2.0"
description = "Deterministic TLS bundle swap CLI: ingest any cert format, deploy to k8s/ssh/local/proxmox with validation, evidence, and ArgoCD-safe swaps."
readme = "README.md"
license = "EUPL-1.2"
license-files = ["LICENSE"]
authors = [{ name = "Mark Westerweel", email = "mark@conduction.nl" }]
requires-python = ">=3.12"
keywords = ["tls", "certificates", "kubernetes", "argocd", "gitops", "certificate-rotation", "pfx", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "cryptography>=48.0.0",
    "httpx>=0.28.1",
    "kubernetes>=30",
    "pydantic>=2",
    "rich>=15.0.0",
    "typer>=0.26.1",
]

[project.urls]
Homepage = "https://github.com/MWest2020/certswap"
Repository = "https://github.com/MWest2020/certswap"
Changelog = "https://github.com/MWest2020/certswap/blob/main/CHANGELOG.md"
Issues = "https://github.com/MWest2020/certswap/issues"

[project.scripts]
certswap = "certswap.cli:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["kubernetes.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "S", "RUF"]
# S603/S607: subprocess use is intentional (ssh/scp/openssl shell-out).
# We pass list args, never shell=True, and never user-controlled command names.
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
# Typer idiom: defaults using typer.Argument/Option.
"src/certswap/cli.py" = ["B008"]
"src/certswap/commands/*.py" = ["B008"]
# Tests: long literal lines and asserts are fine.
"tests/*" = ["E501", "S101"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.14",
]
